refactor: 优化字段访问器生成和类型处理
- 引入 `UnsafeInfo` 类封装 Unsafe 相关信息
- 重构 `FieldAccessorGenerator` 以使用 `UnsafeInfo` 和 `FieldTypeHandler`
- 添加 `FileAccessorType` 枚举定义访问器类型
- 更新 `FieldAccessorFactory` 使用新的枚举类型
- 优化 `ByteBufferUtils` 中的线程局部变量初始化语法